--- a/EasyReantalCarSystem_FrontEnd/index.html
+++ b/EasyReantalCarSystem_FrontEnd/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Easy Car Rental</title>
     <meta content="width=device-width initial-scale=1" name="viewport">
+    <title>Easy Car Rental</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
-<header>
-
-</header>
 <main>
-
+    <section>
+        <h1 class="title">Welcome To Easy Car Rental Service</h1>
+        <div id="btn">
+            <button class="btnStyle">Login</button>
+            <button class="btnStyle">Register</button>
+            <button class="btnStyle">Car Details</button>
+        </div>
+        <img src="assets/images/bgImg.jpg" id="bgImg">
+    </section>
 </main>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
