--- a/EasyReantalCarSystem_FrontEnd/pages/registerPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/registerPage.html
@@ -11,6 +11,8 @@
     <section class="container-fluid">
         <h1 class="text-center mt-2">Customer Register Form</h1>
         <p class="text-center mt-1">Already Have An Account <a href="#">Login</a></p>
+        <p style="display: inline-block;position: absolute;top: 12px;left: 45px;font-size: 20px;font-weight: 600;"><a href="#" style="text-decoration: none; color: black">Back</a></p>
+        <img src="../assets/images/back.png" style="top: 10px; position: absolute; width: 36px;">
         <form class="row g-3 mt-2">
             <div class="col-md-6">
                 <label for="inputCusId" class="form-label">Customer ID</label>
