--- a/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
@@ -5,11 +5,106 @@
     <meta content="width=device-width initial-scale=1" name="viewport">
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <title>Rent a Vehicle</title>
+    <style>
+        .btn-primary{
+            position: absolute;
+            margin: auto;
+            right: 14px;
+        }
+    </style>
 </head>
 <body>
-<header></header>
-<main></main>
+<header>
+    <nav class="navbar navbar-expand-lg bg-dark-subtle">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">ECRS</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Booking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Booking Details</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <button class="btn btn-outline-dark">Log Out</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+</header>
+<main>
+    <section class="container mt-4">
+        <div class="card">
+            <div class="card-header bg-primary-subtle">
+                Enter Your Rental Details
+            </div>
+            <div class="card-body">
+                <form class="row g-3">
+                    <div class="col-md-4">
+                        <label for="inputRentalId" class="form-label">Rental ID</label>
+                        <input type="text" class="form-control" id="inputRentalId" name="rentalId">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="inputCus" class="form-label">Customer ID</label>
+                        <select id="inputCus" class="form-select" name="rentalCId">
+                            <option selected>C001</option>
+                            <option>C002</option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="inputRentalDate" class="form-label">Rental Date</label>
+                        <input type="date" class="form-control" id="inputRentalDate" name="rentalDate">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="inputType" class="form-label">Vehicle Type</label>
+                        <select id="inputType" class="form-select" name="vehicleType">
+                            <option selected>General</option>
+                            <option>Premium</option>
+                            <option>Luxury</option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="inputVehicleNo" class="form-label">Vehicle Number</label>
+                        <select id="inputVehicleNo" class="form-select" name="vehicleNo">
+                            <option selected>AAA-2019</option>
+                            <option>ABS-8571</option>
+                            <option>BAC-5678</option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="inputLdw" class="form-label">Loss Damage Waiver Amount Rs.</label>
+                        <select id="inputLdw" class="form-select" name="ldwAmount">
+                            <option selected>10000</option>
+                            <option>15000</option>
+                            <option>20000</option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="bankSlip" class="form-label">Bank Slip Image</label>
+                        <input class="form-control" type="file" id="bankSlip" name="LDWBankSlip">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+</main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
+<script>
+    setDates();
+
+    function setDates() {
+        let date = new Date().toJSON().split("T")[0];
+        $("#inputRentalDate").val(date);
+    }
+</script>
 </body>
 </html>
