--- a/EasyReantalCarSystem_FrontEnd/index.html
+++ b/EasyReantalCarSystem_FrontEnd/index.html
@@ -12,11 +12,11 @@
     <section>
         <h1 class="title">Welcome To Easy Car Rental Service</h1>
         <div id="btn">
-            <button class="btnStyle">Login</button>
-            <button class="btnStyle">Register</button>
-            <button class="btnStyle">Car Details</button>
+            <a href="#"><button class="btnStyle">Login</button></a>
+            <a href="#"><button class="btnStyle">Register</button></a>
+            <a href="#"><button class="btnStyle">Car Details</button></a>
         </div>
-        <img src="assets/images/bgImg.jpg" id="bgImg">
+        <img class="img-fluid" src="assets/images/pexels-mike-b-120049.jpg">
     </section>
 </main>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
