--- a/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
@@ -5,13 +5,6 @@
     <meta content="width=device-width initial-scale=1" name="viewport">
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <title>Rent a Vehicle</title>
-    <style>
-        .btn-primary{
-            position: absolute;
-            margin: auto;
-            right: 14px;
-        }
-    </style>
 </head>
 <body>
 <header>
@@ -64,8 +57,8 @@
                         <input type="date" class="form-control" id="inputRentalDate" name="rentalDate">
                     </div>
                     <div class="col-md-2">
-                        <label for="inputType" class="form-label">Vehicle Type</label>
-                        <select id="inputType" class="form-select" name="vehicleType">
+                        <label for="inputVehicleType" class="form-label">Vehicle Type</label>
+                        <select id="inputVehicleType" class="form-select" name="vehicleType">
                             <option selected>General</option>
                             <option>Premium</option>
                             <option>Luxury</option>
