--- a/EasyReantalCarSystem_FrontEnd/pages/adminCarManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminCarManage.html
@@ -121,6 +121,31 @@
         </div>
     </div>
 </section>
+    <div class="container table-responsive mt-4">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Car No</th>
+                <th scope="col">Brand</th>
+                <th scope="col">Type</th>
+                <th scope="col">No of Passenger</th>
+                <th scope="col">Transmission Type</th>
+                <th scope="col">Return Date</th>
+                <th scope="col">Fuel Type</th>
+                <th scope="col">Colour</th>
+                <th scope="col">Daily Rate Rs.</th>
+                <th scope="col">Monthly Rate Rs.</th>
+                <th scope="col">Free Km For Day</th>
+                <th scope="col">Free Km For Month</th>
+                <th scope="col">Front View</th>
+                <th scope="col">Back View</th>
+                <th scope="col">Side View</th>
+                <th scope="col">Interior View</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
