--- a/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
@@ -118,7 +118,9 @@
                 </form>
             </div>
         </div>
-        <table class="table table-bordered border-dark mt-4">
+    </section>
+    <div class="container table-responsive mt-4">
+        <table class="table">
             <thead>
             <tr>
                 <th scope="col">Car No</th>
@@ -131,7 +133,7 @@
             </thead>
             <tbody></tbody>
         </table>
-    </section>
+    </div>
 </main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
