--- a/EasyReantalCarSystem_FrontEnd/index.html
+++ b/EasyReantalCarSystem_FrontEnd/index.html
@@ -8,17 +8,145 @@
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
+<header>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="#">ECRS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Vehicles</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <button class="btn btn-outline-light">Sign In</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+</header>
 <main>
     <section>
         <h1 class="title">Welcome To Easy Car Rental Service</h1>
         <div id="btn">
-            <a href="#"><button class="btnStyle">Login</button></a>
             <a href="#"><button class="btnStyle">Register</button></a>
             <a href="#"><button class="btnStyle">Car Details</button></a>
         </div>
         <img class="img-fluid" src="assets/images/pexels-mike-b-120049.jpg">
     </section>
+    <section id="about" class="bg-dark">
+        <div class="container-fluid text-white">
+            <h2 class="text-center fw-bold pt-3">About Us</h2>
+            <div class="container">
+                <p class="fw-medium text-center pb-3">
+                    Easy Car Rental Service is a customer-focused car rental company dedicated to providing affordable,
+                    reliable, and convenient rental solutions to individuals and businesses. Our goal is to simplify the
+                    car rental process and ensure that every customer enjoys a hassle-free experience from start to finish.
+                    With a wide range of vehicles available to suit any need, from small city cars to spacious family SUVs,
+                    we strive to make sure that every customer finds the perfect rental car for their unique requirements.
+                    Our friendly and knowledgeable team is always on hand to provide assistance and answer any questions
+                    you may have, making your rental experience with Easy Car Rental Service both enjoyable and stress-free.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="services">
+        <div class="container">
+            <h2 class="text-center fw-bold">Our Services</h2>
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    <div class="card mx-5" style="width: 18rem;">
+                        <img src="assets/images/service.jpg" class="card-img-top" alt="...">
+                        <div class="card-header text-center fw-medium">24x7 Service</div>
+                        <div class="card-body">
+                            <p class="card-text">Whether you need a car for a late-night road trip or an early morning
+                                airport pickup, our car rental service offers 24-hour service. Book online at any time
+                                and receive support from our friendly and knowledgeable team day or night.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mx-5" style="width: 18rem;">
+                        <img src="assets/images/maintainance.jpg" class="card-img-top" alt="...">
+                        <div class="card-header text-center fw-medium">Maintenance</div>
+                        <div class="card-body">
+                            <p class="card-text">We take pride in providing well-maintained rental cars to our
+                                customers. Our car rental service regularly services and inspects all vehicles to ensure
+                                they are in top condition, so you can enjoy a safe and worry-free rental experience.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mx-5" style="width: 18rem;">
+                        <img src="assets/images/ontimepickup.jpg" class="card-img-top" alt="...">
+                        <div class="card-header text-center fw-medium">On-Time Pickup & Drop-Off</div>
+                        <div class="card-body">
+                            <p class="card-text">At our car rental service, we offer on-time pickup and drop-off at the
+                                customer's location. We pride ourselves on punctuality and ensure that your rental car
+                                is delivered and collected promptly for your convenience.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-dark mt-4" id="contact">
+        <div class="container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+                <div class="col-md-12">
+                    <div class="form h-100">
+                        <h2 class="text-center fw-bold text-white mt-3">Contact Us</h2>
+                        <form class="mb-5 text-white" method="post" id="contactForm" name="contactForm" novalidate="novalidate">
+                            <div class="row">
+                                <div class="col-md-6 form-group mb-3">
+                                    <label class="col-form-label">Name *</label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
+                                </div>
+                                <div class="col-md-6 form-group mb-3">
+                                    <label class="col-form-label">Email *</label>
+                                    <input type="text" class="form-control" name="email" id="email" placeholder="Your email">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="message" class="col-form-label">Message *</label>
+                                    <textarea class="form-control" name="message" id="message" cols="30" rows="4" placeholder="Write your message"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 form-group">
+                                    <input type="submit" value="Send Message" class="btn btn-primary rounded-0 py-2 px-4">
+                                    <span class="submitting"></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
+    <footer class="bg-dark text-center text-white">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-white" href="#">ECRS Pvt. Ltd</a>
+        </div>
+    </footer>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 </body>
