--- a/EasyReantalCarSystem_FrontEnd/index.html
+++ b/EasyReantalCarSystem_FrontEnd/index.html
@@ -141,12 +141,11 @@
         </div>
     </section>
 </main>
-    <footer class="bg-dark text-center text-white">
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2023 Copyright:
-            <a class="text-white" href="#">ECRS Pvt. Ltd</a>
-        </div>
-    </footer>
+<footer class="bg-dark text-center text-white">
+   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+       © 2023 Copyright:<a class="text-white" href="#">ECRS Pvt. Ltd</a>
+   </div>
+</footer>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 </body>
