--- a/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
@@ -23,6 +23,9 @@
                             <a class="nav-link" href="#">Cars</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#">Drivers</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Bookings</a>
                         </li>
                     </ul>
