--- a/EasyReantalCarSystem_FrontEnd/pages/adminCustomerDetails.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminCustomerDetails.html
@@ -2,39 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Car Details</title>
+    <title>Customer Details</title>
     <meta content="width=device-width initial-scale=1" name="viewport">
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg bg-dark-subtle">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">ECRS</a>
+            <a class="navbar-brand" href="#">ECRS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Home</a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About Us</a>
+                        <a class="nav-link" href="#">Cars</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact Us</a>
+                        <a class="nav-link" href="#">Bookings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Services</a>
+                        <a class="nav-link" href="#">Driver</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Vehicles</a>
+                        <a class="nav-link" href="#">Driver Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Customer Details</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <button class="btn btn-outline-light">Sign In</button>
+                    <button class="btn btn-outline-dark">Log Out</button>
                 </form>
             </div>
         </div>
@@ -45,21 +47,16 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">Car No</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Type</th>
-                <th scope="col">No of Passenger</th>
-                <th scope="col">Transmission Type</th>
-                <th scope="col">Fuel Type</th>
-                <th scope="col">Colour</th>
-                <th scope="col">Daily Rate Rs.</th>
-                <th scope="col">Monthly Rate Rs.</th>
-                <th scope="col">Free Km For Day</th>
-                <th scope="col">Free Km For Month</th>
-                <th scope="col">Front View</th>
-                <th scope="col">Back View</th>
-                <th scope="col">Side View</th>
-                <th scope="col">Interior View</th>
+                <th scope="col">Customer ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Password</th>
+                <th scope="col">Contact No.</th>
+                <th scope="col">Address</th>
+                <th scope="col">NIC Image</th>
+                <th scope="col">NIC No</th>
+                <th scope="col">License Image</th>
+                <th scope="col">License No</th>
             </tr>
             </thead>
             <tbody></tbody>
