--- a/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
@@ -23,10 +23,16 @@
                             <a class="nav-link" href="#">Cars</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Drivers</a>
+                            <a class="nav-link" href="#">Bookings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Bookings</a>
+                            <a class="nav-link" href="#">Driver</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Driver Schedule</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Customer Details</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
