--- a/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
@@ -28,6 +28,12 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"href="#">Driver</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Driver Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Customer Details</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <button class="btn btn-outline-dark">Log Out</button>
