--- a/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/rentalPage.html
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Booking Details</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Edit Profile</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <button class="btn btn-outline-dark">Log Out</button>
