--- a/EasyReantalCarSystem_FrontEnd/pages/carDetails.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/carDetails.html
@@ -41,29 +41,48 @@
     </nav>
 </header>
 <main>
-    <div class="container table-responsive mt-4">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">Car No</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Type</th>
-                <th scope="col">No of Passenger</th>
-                <th scope="col">Transmission Type</th>
-                <th scope="col">Fuel Type</th>
-                <th scope="col">Colour</th>
-                <th scope="col">Daily Rate Rs.</th>
-                <th scope="col">Monthly Rate Rs.</th>
-                <th scope="col">Free Km For Day</th>
-                <th scope="col">Free Km For Month</th>
-                <th scope="col">Front View</th>
-                <th scope="col">Back View</th>
-                <th scope="col">Side View</th>
-                <th scope="col">Interior View</th>
-            </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+    <div class="container mt-4">
+        <div class="row g-3">
+            <div class="col-md-3">
+                <div class="card shadow" style="width: 18rem;">
+                    <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
+                    <div class="card-body">
+                        <h5 class="card-title">Suzuki Celerio</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Daily Rate Rs: 3300</li>
+                        <li class="list-group-item">Monthly Rate Rs: 77220</li>
+                        <li class="list-group-item">Transmission Type: Auto</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card shadow" style="width: 18rem;">
+                    <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
+                    <div class="card-body">
+                        <h5 class="card-title">Suzuki Celerio</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Daily Rate Rs: 3300</li>
+                        <li class="list-group-item">Monthly Rate Rs: 77220</li>
+                        <li class="list-group-item">Transmission Type: Auto</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card shadow" style="width: 18rem;">
+                    <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
+                    <div class="card-body">
+                        <h5 class="card-title">Suzuki Celerio</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Daily Rate Rs: 3300</li>
+                        <li class="list-group-item">Monthly Rate Rs: 77220</li>
+                        <li class="list-group-item">Transmission Type: Auto</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
