--- a/EasyReantalCarSystem_FrontEnd/pages/adminCustomerDetails.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminCustomerDetails.html
@@ -43,6 +43,63 @@
     </nav>
 </header>
 <main>
+    <section class="container mt-4">
+        <div class="card">
+            <div class="card-header bg-primary-subtle fw-medium">
+                Manage Customer
+            </div>
+            <div class="card-body">
+                <form class="row g-3">
+                    <div class="col-md-2">
+                        <label for="inputCusId" class="form-label">Customer ID</label>
+                        <input type="text" class="form-control" id="inputCusId" name="cusId">
+                    </div>
+                    <div class="col-md-2">
+                        <label for="inputCusName" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="inputCusName" name="cusName">
+                    </div>
+                    <div class="col-md-2">
+                        <label for="inputEmail4" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4" name="cusEmail">
+                    </div>
+                    <div class="col-md-2">
+                        <label for="inputPassword4" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="inputPassword4" name="cusPwd">
+                    </div>
+                    <div class="col-md-2">
+                        <label for="cusTelNo" class="form-label">Contact No</label>
+                        <input type="text" class="form-control" id="cusTelNo" name="cusConNo">
+                    </div>
+                    <div class="col-md-2">
+                        <label for="cusAddress" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="cusAddress" name="cusAddress">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="nicImage" class="form-label">National Identity Card Image</label>
+                        <input class="form-control" type="file" id="nicImage" name="nicImg">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="cusNicNo" class="form-label">National Identity Card Number(NIC)</label>
+                        <input type="text" class="form-control" id="cusNicNo" name="cusNic">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="licenseImage" class="form-label">License Image</label>
+                        <input class="form-control" type="file" id="licenseImage" name="licenseImg">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="cusLicense" class="form-label">License Number</label>
+                        <input type="text" class="form-control" id="cusLicense" name="cusLicense">
+                    </div>
+                    <div class="form-group col-auto">
+                        <button class="btn btn-danger col-12 col-sm-auto" id="btnCarDelete" type="button">
+                            Delete Customer
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <div class="container table-responsive mt-4">
         <table class="table">
             <thead>
