--- a/EasyReantalCarSystem_FrontEnd/pages/adminCarManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminCarManage.html
@@ -112,6 +112,13 @@
                     <label for="inputPricePerExtraKm" class="form-label">Price Per Extra Km</label>
                     <input type="text" class="form-control" id="inputPricePerExtraKm" name="pricePerExtraKm">
                 </div>
+                <div class="col-md-2">
+                    <label for="inputAvailability" class="form-label">Availability</label>
+                    <select id="inputAvailability" class="form-select" name="availability">
+                        <option selected>Yes</option>
+                        <option>No</option>
+                    </select>
+                </div>
                 <div class="form-group text-right col-md-4 mt-5">
                     <button class="btn btn-success col-12 col-sm-auto" id="btnAddToCarTable" type="button">
                         Add
