--- a/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,13 +74,13 @@
                     </select>
                 </div>
                 <div class="form-group text-right col-md-3 mt-2">
-                    <button class="btn btn-success col-12 col-sm-auto" id="btnAddToCarTable" type="button">
+                    <button class="btn btn-success col-12 col-sm-auto" id="btnSaveDriver" type="button">
                         Add
                     </button>
-                    <button class="btn btn-warning col-12 col-sm-auto" id="btnCarUpdate" type="button">
+                    <button class="btn btn-warning col-12 col-sm-auto" id="btnUpdateDriver" type="button">
                         Update
                     </button>
-                    <button class="btn btn-danger col-12 col-sm-auto" id="btnCarDelete" type="button">
+                    <button class="btn btn-danger col-12 col-sm-auto" id="btnDeleteDriver" type="button">
                         Delete
                     </button>
                 </div>
@@ -104,5 +104,12 @@
 </main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
+<script>
+    let baseUrl = "http://localhost:8080/EasyCarRentalSystem_BackEnd_war_exploded/api/v1/driver/";
+
+    $("#btnSaveDriver").click(function () {
+
+    });
+</script>
 </body>
 </html>
