--- a/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,42 +49,42 @@
             Manage Driver
         </div>
         <div class="card-body">
-            <form class="row g-3">
+            <form class="row g-3" id="driverForm">
                 <div class="col-md-2">
                     <label for="inputDriverID" class="form-label">Driver ID</label>
                     <input type="text" class="form-control" id="inputDriverID" name="driverId">
                 </div>
                 <div class="col-md-2">
                     <label for="inputDriverName" class="form-label">Driver Name</label>
-                    <input type="text" class="form-control" id="inputDriverName" name="driverName">
+                    <input type="text" class="form-control" id="inputDriverName" name="name">
                 </div>
                 <div class="col-md-2">
                     <label for="inputDriverContactNo" class="form-label">Contact No</label>
-                    <input type="text" class="form-control" id="inputDriverContactNo" name="driverContactNo">
+                    <input type="text" class="form-control" id="inputDriverContactNo" name="contactNo">
                 </div>
                 <div class="col-md-3">
                     <label for="inputDriverLicenseNo" class="form-label">License No</label>
-                    <input type="text" class="form-control" id="inputDriverLicenseNo" name="driverLicenseNo">
+                    <input type="text" class="form-control" id="inputDriverLicenseNo" name="licenseNo">
                 </div>
                 <div class="col-md-3">
                     <label for="inputAvailability" class="form-label">Availability</label>
-                    <select id="inputAvailability" class="form-select" name="driverAvailability">
+                    <select id="inputAvailability" class="form-select" name="availability">
                         <option selected>Yes</option>
                         <option>No</option>
                     </select>
                 </div>
-                <div class="form-group text-right col-md-3 mt-2">
-                    <button class="btn btn-success col-12 col-sm-auto" id="btnSaveDriver" type="button">
-                        Add
-                    </button>
-                    <button class="btn btn-warning col-12 col-sm-auto" id="btnUpdateDriver" type="button">
-                        Update
-                    </button>
-                    <button class="btn btn-danger col-12 col-sm-auto" id="btnDeleteDriver" type="button">
-                        Delete
-                    </button>
-                </div>
             </form>
+            <div class="btn-group text-right col-md-3 mt-2">
+                <button class="btn btn-success col-12 col-sm-auto" id="btnSaveDriver" type="button">
+                    Add
+                </button>
+                <button class="btn btn-warning col-12 col-sm-auto" id="btnUpdateDriver" type="button">
+                    Update
+                </button>
+                <button class="btn btn-danger col-12 col-sm-auto" id="btnDeleteDriver" type="button">
+                    Delete
+                </button>
+            </div>
         </div>
     </div>
 </section>
@@ -105,10 +105,24 @@
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
 <script>
-    let baseUrl = "http://localhost:8080/EasyCarRentalSystem_BackEnd_war_exploded/api/v1/driver/";
+    let baseUrl = "http://localhost:8080/EasyCarRentalSystem_BackEnd_war_exploded/api/v1/";
 
     $("#btnSaveDriver").click(function () {
+        var formData = $("#driverForm").serialize();
 
+        $.ajax({
+            url: baseUrl + "driver",
+            method: "post",
+            data: formData,
+            dataType: "json",
+            success(resp) {
+                alert(resp.message);
+            },
+            error:function(error){
+                var jsObject=JSON.parse(error.responseText);
+                alert(jsObject.message);
+            }
+        });
     });
 </script>
 </body>
